--- a/src/README
+++ b/src/README
@@ -1,18 +1,6 @@
-Welcome to your Appcelerator Titanium Mobile Project
+Before you set up
 
-This is a blank project.  Start by editing your application's app.js to 
-make your first mobile project using Titanium.
-
+make sure you edit line number 49 tiapp.xml according to the titanium sdk version you are running
 
 
-----------------------------------
-Stuff our legal folk make us say:
-
-Appcelerator, Appcelerator Titanium and associated marks and logos are 
-trademarks of Appcelerator, Inc. 
-
-Titanium is Copyright (c) 2008-2013 by Appcelerator, Inc. All Rights Reserved.
-
-Titanium is licensed under the Apache Public License (Version 2). Please
-see the LICENSE file for the full license.
 
